--- a/asset/install.txt
+++ b/asset/install.txt
@@ -1,1 +1,3 @@
 mongoimport -d nana -c modules d:\GitHub\nana\asset\modules.json --jsonArray
+
+mongoimport -d nana -c roles d:\GitHub\nana\asset\role.json --jsonArray
