--- a/asset/install.txt
+++ b/asset/install.txt
@@ -6,4 +6,4 @@ mongoimport -d nana -c users d:\GitHub\nana\asset\user.json --jsonArray
 
 mongoimport -d nana -c devices d:\GitHub\nana\asset\device.json --jsonArray
 
-mongoimport -d nana -c deviceTypes d:\GitHub\nana\asset\deviceType.json --jsonArray
+mongoimport -d nana -c devicetypes d:\GitHub\nana\asset\deviceType.json --jsonArray
